--- a/project.json
+++ b/project.json
@@ -8,6 +8,8 @@
 	"projectInitials" : "PD",				  
 	"description": "Phoca Download Finder plugin is a Joomla! plugin which allows you to search for documents of Phoca Download powered by Joomla! Smart Search (Finder) feature.",
 	"projectUrl": "https://www.phoca.cz/phoca-download-finder-plugin",
+	"projectMainComponent": "Phoca Download",
+	"projectMainComponentInfoUrl": "https://www.phoca.cz/project/phocadownload-joomla-download",
 	"projectDocumentationUrl": "https://www.phoca.cz/documentation/category/73-phoca-download-finder-plugin",
 	"projectDemo" : {
 		"Joomla! 2.5 Demo": "https://www.phoca.cz/joomlademo/"
